--- a/kbase.yml
+++ b/kbase.yml
@@ -8,10 +8,10 @@ service-language:
     java
 
 module-version:
-    0.0.2
+    0.0.3
 
 owners:
-    [rsutormin]
+    [rsutormin, gaprice]
 
 service-config:
     dynamic-service: true
